tests/error/negate_bool.magi
// TEST: Negating a boolean should error

main :: () -> i32 {
    a := true
    b := -a
    return 0
}
